[package]
name = "cast-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.14.0", features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }

alloy-primitives = { version = "1.5.2", features = [
    "getrandom",
    "rand",
    "map-fxhash",
    "map-foldhash",
] }
cast = { git = "https://github.com/foundry-rs/foundry.git", rev = "1962f8bd5a06891d7817b16d8423f0a497e2d26d"}
foundry-cli = { git = "https://github.com/foundry-rs/foundry.git", rev = "1962f8bd5a06891d7817b16d8423f0a497e2d26d"}
foundry-config = { git = "https://github.com/foundry-rs/foundry.git", rev = "1962f8bd5a06891d7817b16d8423f0a497e2d26d"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_default = "0.2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.9", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
schemars = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.15" }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1" }
hyper-util = { version = "0", features = ["server"] }
tokio-util = { version = "0.7" }
url = "2.5"

# solar
solar = { package = "solar-compiler", version = "=0.1.8", default-features = false }
alloy-provider = { version = "1.4", default-features = false }

[dev-dependencies]
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec"] }

[patch.crates-io]
solar = {package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
